apps/rotki/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rotki
  namespace: rotki
spec:
  selector:
    app: rotki
  ports:
  - name: http
    port: 80
    targetPort: 80
